--- a/app/src/main/res/layout/activity_new_admin_password.xml
+++ b/app/src/main/res/layout/activity_new_admin_password.xml
@@ -23,7 +23,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.ema.activities.admin.AdminFormActivity">
+    tools:context="org.ema.activities.admin.NewAdminPassword">
 
     <ImageView
         android:id="@+id/imageView"
@@ -31,20 +31,20 @@
         android:layout_height="96dp"
         android:src="@mipmap/logo3"
         android:contentDescription="@string/login"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:textStyle="bold"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/name"
+        android:text="@string/newPassword"
         android:id="@+id/newPassTxt"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -57,7 +57,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/newPass"
-        android:inputType=""
+        android:inputType="textPassword"
         android:layout_marginTop="9dp"
         app:layout_constraintTop_toBottomOf="@+id/newPassTxt"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -71,15 +71,14 @@
         android:textStyle="bold"
         android:layout_height="0dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/password"
+        android:text="@string/ConfirmPassword"
         android:id="@+id/confirmPassTxt"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/emailField" />
+        app:layout_constraintTop_toBottomOf="@+id/newPass"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
     <EditText
@@ -97,36 +96,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/confirmPassTxt" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:textStyle="bold"
-        android:layout_height="0dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/Email"
-        android:id="@+id/emailView"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/newPass"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
-
-
-    <EditText
-        android:id="@+id/emailField"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/emailView"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -142,8 +111,7 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/information"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/confirmaPass"
-        app:layout_constraintVertical_bias="0.179" />
+        app:layout_constraintTop_toBottomOf="@+id/confirmaPass" />
 
     <TextView
         android:id="@+id/information"
@@ -161,4 +129,3 @@
         app:layout_constraintHorizontal_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
-
