--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -40,7 +40,7 @@
         android:layout_marginTop="8dp" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/newPassTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
@@ -104,7 +104,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_gravity="start"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/newPassTxt"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
