--- a/app/src/main/res/layout/activity_admin_form.xml
+++ b/app/src/main/res/layout/activity_admin_form.xml
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/name"
-        android:id="@+id/newPassTxt"
+        android:id="@+id/newNameTxt"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         android:layout_marginLeft="8dp"
@@ -56,10 +56,10 @@
     <EditText
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/newPass"
+        android:id="@+id/newName"
         android:inputType=""
         android:layout_marginTop="9dp"
-        app:layout_constraintTop_toBottomOf="@+id/newPassTxt"
+        app:layout_constraintTop_toBottomOf="@+id/newNameTxt"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -79,11 +79,11 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/emailField" />
+        app:layout_constraintTop_toBottomOf="@+id/emailTxt" />
 
 
     <EditText
-        android:id="@+id/confirmaPass"
+        android:id="@+id/passwordTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -105,7 +105,7 @@
         android:text="@string/Email"
         android:id="@+id/emailView"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/newPass"
+        app:layout_constraintTop_toBottomOf="@+id/newName"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
@@ -113,7 +113,7 @@
 
 
     <EditText
-        android:id="@+id/emailField"
+        android:id="@+id/emailTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -132,7 +132,7 @@
         android:layout_height="wrap_content"
         android:theme="@style/BlueButton"
         android:text="@string/save"
-        android:id="@+id/save"
+        android:id="@+id/saveBtn"
         android:onClick="save"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="8dp"
@@ -142,7 +142,7 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/information"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/confirmaPass"
+        app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
         app:layout_constraintVertical_bias="0.179" />
 
     <TextView
