--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/name"
-        android:id="@+id/newPassTxt"
+        android:id="@+id/newNameTxt"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         android:layout_marginLeft="8dp"
@@ -58,7 +58,7 @@
         android:layout_marginEnd="8dp" />
 
     <EditText
-        android:id="@+id/newPass"
+        android:id="@+id/newName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -70,7 +70,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newPassTxt" />
+        app:layout_constraintTop_toBottomOf="@+id/newNameTxt" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -85,13 +85,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/newPass"
+        app:layout_constraintTop_toBottomOf="@+id/newName"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
 
     <EditText
-        android:id="@+id/confirmaPass"
+        android:id="@+id/passwordTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -120,7 +120,7 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/confirmaPass"
+        app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
