--- a/app/src/main/res/layout/activity_new_admin_password.xml
+++ b/app/src/main/res/layout/activity_new_admin_password.xml
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/newPassword"
-        android:id="@+id/newPassTxt"
+        android:id="@+id/newNameTxt"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         android:layout_marginLeft="8dp"
@@ -56,10 +56,10 @@
     <EditText
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/newPass"
+        android:id="@+id/newName"
         android:inputType="textPassword"
         android:layout_marginTop="9dp"
-        app:layout_constraintTop_toBottomOf="@+id/newPassTxt"
+        app:layout_constraintTop_toBottomOf="@+id/newNameTxt"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -76,13 +76,13 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/newPass"
+        app:layout_constraintTop_toBottomOf="@+id/newName"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent" />
 
 
     <EditText
-        android:id="@+id/confirmaPass"
+        android:id="@+id/passwordTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -101,7 +101,7 @@
         android:layout_height="wrap_content"
         android:theme="@style/BlueButton"
         android:text="@string/save"
-        android:id="@+id/save"
+        android:id="@+id/saveBtn"
         android:onClick="save"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="8dp"
@@ -111,7 +111,7 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/information"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/confirmaPass" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />
 
     <TextView
         android:id="@+id/information"
