--- a/app/src/main/res/layout/activity_take_photo.xml
+++ b/app/src/main/res/layout/activity_take_photo.xml
@@ -26,7 +26,7 @@
     tools:context="org.ema.activities.operations.TakePhotoActivity" >
 
     <TextView
-        android:id="@+id/newPassTxt"
+        android:id="@+id/newNameTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -79,7 +79,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/newPassTxt"
+        app:layout_constraintTop_toBottomOf="@+id/newNameTxt"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
