--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/name"
-            android:id="@+id/newPassTxt"
+            android:id="@+id/newNameTxt"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
             android:layout_marginLeft="8dp"
@@ -57,7 +57,7 @@
         <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/newPass"
+            android:id="@+id/newName"
 
             android:inputType=""
             android:layout_marginRight="8dp"
@@ -65,7 +65,7 @@
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="7dp"
-            app:layout_constraintTop_toBottomOf="@+id/newPassTxt"
+            app:layout_constraintTop_toBottomOf="@+id/newNameTxt"
             app:layout_constraintHorizontal_bias="0.0" />
 
         <TextView
@@ -76,7 +76,7 @@
             android:text="@string/password"
             android:id="@+id/confirmPassTxt"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/newPass"
+            app:layout_constraintTop_toBottomOf="@+id/newName"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/confirmaPass"
+            android:id="@+id/passwordTxt"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/confirmPassTxt"
             android:layout_marginRight="8dp"
@@ -110,7 +110,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/confirmaPass" />
+            app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />
 
         <Button
             android:layout_width="wrap_content"
@@ -126,6 +126,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="9dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/confirmaPass" />
+            app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />
 
 </android.support.constraint.ConstraintLayout>
